Fix Java 17 compatibility issues
Co-authored-by: SakSal-tech <201667702+SakSal-tech@users.noreply.github.com>